first page (index.html) finished just a few things to correct

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     />
     <title>Découverte de la plongée sous-marine</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    />
   </head>
   <body>
     <header class="header-flex">
@@ -147,7 +151,19 @@
         </article>
       </section>
     </div>
-    <footer></footer>
+    <footer>
+      <p>Guillaume / P1 - WCS - Oct-22</p>
+      <div class="social-link">
+        <ul>
+          <li>
+            <a href="#"> <i class="fa fa-github"></i>Github </a>
+          </li>
+          <li>
+            <a href="#"> <i class="fa fa-linkedin"></i>Linkedin </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
