--- a/index.html
+++ b/index.html
@@ -41,116 +41,113 @@
         <input type="search" />
       </div>
     </section>
-    <div class="sticky-menu-article">
-      <nav>
-        <ul class="sub-menu">
-          <li id="data-tab" class="sub-menu-list">Quelques chiffres</li>
-          <li id="health-tab" class="sub-menu-list">Les bienfaits</li>
-          <li id="job-tab" class="sub-menu-list">Sport / Métier ?</li>
-        </ul>
-      </nav>
-      <section class="presentation">
-        <article id="data" class="active-article">
-          <h3>La plongée en quelques chiffres...</h3>
-          <div class="content">
-            <img
-              src="medias/stats.jpg"
-              alt="photos d'un groupe de plongeurs dans une piscine"
-            />
-            <div class="paragraphe">
-              <p>
-                360000 personnes pratiquent la plongée en France, 149000 sont
-                licenciés dans un club représentant 45% des pratiquants. La
-                proportion de femmes parmi les plongeurs français est de 30%
-                tandis que les enfants (-14 ans) représentent 21% des plongeurs.
-                Nous comptons cependant 83 à 89% de moniteurs masculins donc
-                très peu de femmes. Il existe actuellement environ 2000 clubs et
-                350 Structures Commerciales Agréées.
-              </p>
-              <p>
-                Tout ceci nous amène à un total d’environ 2,2 millions de
-                plongées par an. 30000 Plongeurs voyagent chaque année pour
-                plonger à l’étranger. 45% des plongées sont réalisées à
-                l’intérieur des terres (carrières, lacs, grottes…) et 55% en
-                façade maritime. 42% des plongeurs en scaphandre pratiquent de 1
-                à 5 fois par an, 37% de 6 à 20 fois par an et 21% plus de 20
-                fois par an. En termes de formation, 70000 qualifications /
-                diplômes sont délivrés chaque année. Le nombre d'accidents de
-                plongée admis dans les centres hyperbares français est d'environ
-                350 par an, soit 1 accident pour 6 à 10 000 plongées.
-              </p>
-            </div>
+    <nav class="sticky-menu-article">
+      <ul class="sub-menu">
+        <li id="data-tab" class="sub-menu-list">Quelques chiffres</li>
+        <li id="health-tab" class="sub-menu-list">Les bienfaits</li>
+        <li id="job-tab" class="sub-menu-list">Sport / Métier ?</li>
+      </ul>
+    </nav>
+    <section class="presentation">
+      <article id="data" class="active-article">
+        <h3>La plongée en quelques chiffres...</h3>
+        <div class="content">
+          <img
+            src="medias/stats.jpg"
+            alt="photos d'un groupe de plongeurs dans une piscine"
+          />
+          <div class="paragraphe">
+            <p>
+              360000 personnes pratiquent la plongée en France, 149000 sont
+              licenciés dans un club représentant 45% des pratiquants. La
+              proportion de femmes parmi les plongeurs français est de 30%
+              tandis que les enfants (-14 ans) représentent 21% des plongeurs.
+              Nous comptons cependant 83 à 89% de moniteurs masculins donc très
+              peu de femmes. Il existe actuellement environ 2000 clubs et 350
+              Structures Commerciales Agréées.
+            </p>
+            <p>
+              Tout ceci nous amène à un total d’environ 2,2 millions de plongées
+              par an. 30000 Plongeurs voyagent chaque année pour plonger à
+              l’étranger. 45% des plongées sont réalisées à l’intérieur des
+              terres (carrières, lacs, grottes…) et 55% en façade maritime. 42%
+              des plongeurs en scaphandre pratiquent de 1 à 5 fois par an, 37%
+              de 6 à 20 fois par an et 21% plus de 20 fois par an. En termes de
+              formation, 70000 qualifications / diplômes sont délivrés chaque
+              année. Le nombre d'accidents de plongée admis dans les centres
+              hyperbares français est d'environ 350 par an, soit 1 accident pour
+              6 à 10 000 plongées.
+            </p>
           </div>
-        </article>
-        <article id="health" class="flex">
-          <h3>Les bienfaits de la plongée</h3>
-          <div class="content">
-            <img
-              src="medias/fauteuil.png"
-              alt="Plongeur Handisub en milieu naturel accompagné d'un moniteur"
-            />
-            <div class="paragraphe">
-              <p>
-                Une fois sous l'eau, l'heure est à la détente ! Loin, très loin
-                du stress et des petits tracas du quotidien, vous serez plongé
-                dans un environnement sauvage et vous n'aurez plus qu'à vous
-                laisser porter par l’ambiance de cet univers silencieux.
-                Pratiquer la plongée permet donc de réduire le stress
-                naturellement. D'ailleurs, on apparente même la plongée au yoga
-                puisqu’apprendre à maîtriser sa respiration est l'une des bases
-                essentielles lorsque l'on s'initie à l'une ou l'autre de ces
-                pratiques.
-              </p>
-              <p>
-                Les personnes en situation de handicap peuvent pratiquer la
-                plongée. Handisub est la réponse pour ces dernières de pratiquer
-                la plongée et les sports subaquatiques, quel que soit la
-                situation de handicap rencontrée, moteur, sensoriel, mental,
-                psychique ou cognitif. Dans bien des cas, le handicap est
-                soluble dans l’eau ! Au fur et à mesure de sa formation, le
-                plongeur va évoluer et acquérir progressivement des compétences
-                et de l’expérience lui permettant d’accéder à des espaces
-                d’évolution plus important en compagnie de son encadrant.
-              </p>
-            </div>
+        </div>
+      </article>
+      <article id="health" class="flex">
+        <h3>Les bienfaits de la plongée</h3>
+        <div class="content">
+          <img
+            src="medias/fauteuil.png"
+            alt="Plongeur Handisub en milieu naturel accompagné d'un moniteur"
+          />
+          <div class="paragraphe">
+            <p>
+              Une fois sous l'eau, l'heure est à la détente ! Loin, très loin du
+              stress et des petits tracas du quotidien, vous serez plongé dans
+              un environnement sauvage et vous n'aurez plus qu'à vous laisser
+              porter par l’ambiance de cet univers silencieux. Pratiquer la
+              plongée permet donc de réduire le stress naturellement.
+              D'ailleurs, on apparente même la plongée au yoga puisqu’apprendre
+              à maîtriser sa respiration est l'une des bases essentielles
+              lorsque l'on s'initie à l'une ou l'autre de ces pratiques.
+            </p>
+            <p>
+              Les personnes en situation de handicap peuvent pratiquer la
+              plongée. Handisub est la réponse pour ces dernières de pratiquer
+              la plongée et les sports subaquatiques, quel que soit la situation
+              de handicap rencontrée, moteur, sensoriel, mental, psychique ou
+              cognitif. Dans bien des cas, le handicap est soluble dans l’eau !
+              Au fur et à mesure de sa formation, le plongeur va évoluer et
+              acquérir progressivement des compétences et de l’expérience lui
+              permettant d’accéder à des espaces d’évolution plus important en
+              compagnie de son encadrant.
+            </p>
           </div>
-        </article>
-        <article id="job" class="flex">
-          <h3>Sport ou Métier ?</h3>
-          <div class="content">
-            <img
-              src="medias/job.jpg"
-              alt="Scaphandrieren train de souder lors d'une plongée"
-            />
-            <div class="paragraphe">
-              <p>
-                Qui n’a pas rêvé de transformer sa passion en métier : vivre de
-                sa passion au quotidien. Le métier de moniteur de plongée vous
-                permet cela. Mais il y a aussi Les métiers de la plongée qui
-                touchent l’environnement ou la recherche, ceux en rapport avec
-                l’entretien, ceux visant l’information (caméraman, photographe),
-                ceux émanant des services de protection, de sécurité et/ou de la
-                santé (plongeur démineur, marins pompiers, gendarmes). Les
-                métiers en lien avec la plongée ne sont pas uniquement réservés
-                aux plongeurs professionnels.
-              </p>
-              <p>
-                Avant d’envisager de travailler dans la plongée, il faut
-                d’abord… devenir plongeur ! Ensuite, il faudra pour de
-                nombreuses spécialités faire une formation spécifique. On ne
-                s’improvise pas scaphandrier, biologiste marin ou moniteur de
-                plongée. Les scaphandriers contemporains sont des ouvriers
-                généralement polyvalents ayant des connaissances dans la
-                soudure, le coupage, les explosifs, la menuiserie, le béton et
-                bien d'autres, comme la vidéo et la photographie sous-marine, la
-                manœuvre d'embarcation, en plus de l'utilisation et l'entretien
-                d'une grande variété d'équipements de plongée.
-              </p>
-            </div>
+        </div>
+      </article>
+      <article id="job" class="flex">
+        <h3>Sport ou Métier ?</h3>
+        <div class="content">
+          <img
+            src="medias/job.jpg"
+            alt="Scaphandrieren train de souder lors d'une plongée"
+          />
+          <div class="paragraphe">
+            <p>
+              Qui n’a pas rêvé de transformer sa passion en métier : vivre de sa
+              passion au quotidien. Le métier de moniteur de plongée vous permet
+              cela. Mais il y a aussi Les métiers de la plongée qui touchent
+              l’environnement ou la recherche, ceux en rapport avec l’entretien,
+              ceux visant l’information (caméraman, photographe), ceux émanant
+              des services de protection, de sécurité et/ou de la santé
+              (plongeur démineur, marins pompiers, gendarmes). Les métiers en
+              lien avec la plongée ne sont pas uniquement réservés aux plongeurs
+              professionnels.
+            </p>
+            <p>
+              Avant d’envisager de travailler dans la plongée, il faut d’abord…
+              devenir plongeur ! Ensuite, il faudra pour de nombreuses
+              spécialités faire une formation spécifique. On ne s’improvise pas
+              scaphandrier, biologiste marin ou moniteur de plongée. Les
+              scaphandriers contemporains sont des ouvriers généralement
+              polyvalents ayant des connaissances dans la soudure, le coupage,
+              les explosifs, la menuiserie, le béton et bien d'autres, comme la
+              vidéo et la photographie sous-marine, la manœuvre d'embarcation,
+              en plus de l'utilisation et l'entretien d'une grande variété
+              d'équipements de plongée.
+            </p>
           </div>
-        </article>
-      </section>
-    </div>
+        </div>
+      </article>
+    </section>
     <footer>
       <p>Guillaume / P1 - WCS - Oct-22</p>
       <div class="social-link">
