add content of table on page 2 -level.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Découvrez la plongée sous-marine à travers mes articles présentant cette activité sous divers aspects"
     />
     <title>Découverte de la plongée sous-marine</title>
+    <link rel="shortcut icon" type="image/png" href="medias/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -85,10 +86,11 @@
         <h3>Les bienfaits de la plongée</h3>
         <div class="content">
           <img
+            class="order-b"
             src="medias/fauteuil.png"
             alt="Plongeur Handisub en milieu naturel accompagné d'un moniteur"
           />
-          <div class="paragraphe">
+          <div class="paragraphe order-a">
             <p>
               Une fois sous l'eau, l'heure est à la détente ! Loin, très loin du
               stress et des petits tracas du quotidien, vous serez plongé dans
@@ -118,7 +120,7 @@
         <div class="content">
           <img
             src="medias/job.jpg"
-            alt="Scaphandrieren train de souder lors d'une plongée"
+            alt="Scaphandrier en train de souder lors d'une plongée"
           />
           <div class="paragraphe">
             <p>
