begin redaction file html and css

--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
           </li>
         </ul>
       </div>
+      <div id="scroll" class="scroll-to-top">
+        <img src="medias/scrolltotop.svg" alt="Retourner en haut" />
+      </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script-home.js"></script>
   </body>
 </html>
