--- a/level.html
+++ b/level.html
@@ -49,121 +49,63 @@
         <li id="deep" class="sub-menu-list">Espaces d'évolution</li>
       </ul>
     </nav>
-    <section class="level">
-      <!--doit être en z-index -2 en css-->
-      <div class="diver-level table-flex">
-        <h3>Niveaux de plongeur en France</h3>
-        <table>
-          <thead>
-            <tr>
-              <th>Niveau</th>
-              <th>Prérogatives</th>
-              <th>Aptitude (Code du Sport)</th>
-              <th>CMAS</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Niveau 1</td>
-              <td>Plongeur encadré jusque 20 m</td>
-              <td>PE-20</td>
-              <td>Plongeur ★</td>
-            </tr>
-            <tr>
-              <td>Niveau 2</td>
-              <td>
-                Plongeur encadré jusqu'à 40 m
-                <p>Plongeur autonome jusqu'à 20 m</p>
-              </td>
-              <td>
-                PE-40
-                <p>PA-20</p>
-              </td>
-              <td>Plongeur ★★</td>
-            </tr>
-            <tr>
-              <td>Niveau 3</td>
-              <td>
-                Plongeur autonome jusqu'à 40 m
-                <p>Plongeur autonome jusqu'à 60 m avec accord du DP</p>
-              </td>
-              <td>PA-60</td>
-              <td>Plongeur ★★★</td>
-            </tr>
-            <tr>
-              <td>Niveau 4</td>
-              <td>
-                Encadrement (en exploration) de plongeurs Débutants à N4
-                <p>Plongeur autonome jusqu'à 60 m</p>
-              </td>
-              <td>GP</td>
-              <td>Plongeur ★★★</td>
-            </tr>
-            <tr>
-              <td>Niveau 5</td>
-              <td>
-                Directeur de plongée (en exploration)
-                <p>Plongeur autonome jusqu'à 60 m</p>
-              </td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="teach-level table-flex">
-        <h3>Niveaux d'enseignement de la plongée en France</h3>
-        <table>
-          <thead>
-            <tr>
-              <th>Niveau</th>
-              <th>Prérogatives</th>
-              <th>Code du Sport</th>
-              <th>CMAS</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Moniteur E1 (initiateur)</td>
-              <td>
-                Enseignant du N1 au N2 jusqu'à 6 m
+    <main>
+      <section>
+      <h3>QUELQUES INFORMATIONS À CONNAÎTRE SUR LES NIVEAUX DE PLONGÉE</h3>
+    <p>Si vous avez déjà fait votre baptême de plongée ou que vous vous intéressez de plus en plus à la pratique de cette activité fascinante, vous avez certainement entendu parler des différents niveaux à passer. Ceux-ci permettent de plonger à différentes profondeurs en fonction des compétences acquises, encadrés ou en autonomie, pour le plaisir et la sécurité de tous.
+        La plongée est une activité qui s’est démocratisée assez récemment : c’est dans les années 1960 que sont apparues les formations pour le grand public. Aujourd’hui, il existe différents organismes français ou anglo-saxons qui proposent des cursus pour acquérir de plus en plus d’autonomie et de connaissances.
+        La formation est découpée en niveaux : 1, 2, 3 et 4.
+        Ces niveaux peuvent se passer en une ou deux semaines intensives mais peuvent aussi être étalés dans le temps. Il existe des paliers intermédiaires qui facilitent la formation et permettent d’étaler chaque niveau sur plusieurs mois.</p>
+      </section>
+        <section class="container">
+        <div class="tabs">
+            <h4 class="active">Niveau 1</h4>
+            <h4>Niveau 2</h4>
+            <h4>Niveau 3</h4>
+            <h4>Niveau 4</h4>
+        </div>
+        <div class="tab-content">
+            <div class="level active">
+                <h5>LE NIVEAU 1 : PLONGER JUSQU’À 20 MÈTRES</h5>
+                <img src="medias/niveau1.jpg" alt="Plongeur niveau 1 en immersion avec son encadrant">
                 <p>
-                  Directeur de plongée (en milieu artificiel de moins de 6 m
-                  uniquement)
+                    Après le baptême, le niveau 1 est très intéressant à passer pour les plongeurs amateurs. Il donne accès aux plongées jusqu’à 20 mètres et c’est à cette profondeur que l’on trouve les paysages les plus colorés. Il permet aussi de plonger sur des tombants de roches et d’explorer certaines grottes, ainsi que de s’immerger de nuit pour observer la faune et la flore nocturne. Au niveau 1, les sorties restent toujours encadrées par un moniteur. Pour le passer, il faut évidemment savoir nager et avoir au moins 12 ans. Il faudra posséder un certificat médical d’aptitude à la pratique de la plongée lors de vos passages de niveau.
+                    Ensuite, vous pouvez choisir de suivre la formation en milieu naturel ou en fosse de plongée. Celle-ci dure minimum trois jours puisque pour valider les compétences, il faut réaliser environ six plongées.
                 </p>
-              </td>
-              <td>E1</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Moniteur E2</td>
-              <td>Enseignant du N1 au N4 jusqu'à 20 m</td>
-              <td>E2</td>
-              <td>Moniteur ★</td>
-            </tr>
-            <tr>
-              <td>Moniteur fédéral 1er degré (MF1)</td>
-              <td>
-                Enseignant du N1 au N5 jusque 40 m
-                <p>Directeur de plongée</p>
-              </td>
-              <td>E3</td>
-              <td>Moniteur ★★</td>
-            </tr>
-            <tr>
-              <td>Moniteur fédéral 2ème degré (MF2)</td>
-              <td>
-                Enseignant du N1 au N5 jusque 60 m
-                <p>Enseignant de MF1</p>
-              </td>
-              <td>E4</td>
-              <td>Moniteur ★★★</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <figure class="deep-evolution"></figure>
-    </section>
+            </div>
+
+            <div class="level">
+                <h5>LE NIVEAU 2 : PLONGER EN AUTONOMIE</h5>
+                <img src="medias/Niveau2.jpg" alt="Palanquée de plongeurs niveau 2">
+                <p>
+                    Pour passer le niveau 2 de plongée, il faudra obligatoirement justifier d’un niveau 1 ou d’un brevet équivalent. Vous devez aussi justifier d’une dizaine de plongées en exploration après le passage du niveau 1. Cette fois-ci, deux semaines de formation sont nécessaires, obligatoirement en milieu naturel, pour compléter le niveau entièrement mais elles peuvent être découpées en deux fois. Une première semaine permettra l’obtention de la qualification « plongeur encadré à 40 mètres » et la formation pourra être complétée l’année suivante. Le niveau 2 est très intéressant car il permet de découvrir les fonds marins jusqu’à 40 mètres de profondeur avec un moniteur. C’est à cette profondeur que l’on trouve des épaves de bateaux et d’avions, notamment en Méditerranée. Il permet aussi de découvrir la plongée en autonomie. Avec une ou deux autres personnes du même niveau, vous pouvez ainsi partir sans moniteur et plonger jusqu’à 20 mètres.
+                </p>
+            </div>
+
+            <div class="level">
+                <h5>LE NIVEAU 3 : DÉCOUVRIR LES FONDS-MARINS JUSQU’À 60 MÈTRES</h5>
+                <img src="medias/niveau3.jpg" alt="Palanquée de plongeurs niveau 3">
+                <p>
+                    Le niveau 3 est le plus haut niveau technique de plongeur et évidemment le plus exigeant puisqu’il faut justifier d’une vingtaine de plongées en exploration après son niveau 2 pour y prétendre. Il est également obligatoire d’être majeur pour s’inscrire à cette formation. Là encore, il faudra au minimum deux semaines et 20 plongées pour l’obtenir. Il peut être découpé en deux : la première partie consiste en un stage de préparation et la seconde permet d’obtenir le niveau. Pour les plongeurs, c’est un graal car il donne accès à la majorité des sites de plongées en France et dans le monde.
+                </p>
+            </div>
+            <div class="level">
+                <h5>LE NIVEAU 4 : ENCADRER UN GROUPE DE PLONGEURS</h5>
+                <img src="medias/niveau4.jpg" alt="Palanquée de plongeurs niveau 4">
+                <p>
+                    Le niveau 4 n’est pas un niveau de plongeur, il s’agit du premier niveau d’encadrant. Il faut évidemment justifier du niveau 3 et d’une cinquantaine de plongées en exploration après son obtention. Il faut donc avoir acquis une solide expérience pour prétendre à ce niveau. La formation dure deux semaines avec une formation initiale et une formation finale de 20 plongées minimum en milieu naturel. Une fois obtenu, vous pourrez guider une palanquée, votre propre groupe de plongeurs de différents niveaux jusqu’à une profondeur de 40 mètres maximum. Vous ne plongez plus pour vous mais pour les autres. Cela implique donc de nouvelles responsabilités. Sous l’eau, vous êtes un guide, le sauf-conduit de votre groupe en cas de problème et c’est vous qui devez ramener tout le monde au bateau à la fin de l’immersion. Il s’agit aussi du premier pas vers l’enseignement de la plongée et le monitorat.
+                </p>
+            </div>
+        </div>
+    
+      <figure class="deep-evolution table-flex">
+        <h3>Constitution des palanquées en France</h3>
+        <img
+          src="medias/palanquee.png"
+          alt="Schéma représentant la constitution possible des palanquées en plongée en France"
+        />
+      </figure>
+    </main>
     <footer>
       <p>Guillaume / P1 - WCS - Oct-22</p>
       <div class="social-link">
@@ -176,7 +118,10 @@
           </li>
         </ul>
       </div>
+      <div id="scroll" class="scroll-to-top">
+        <img src="medias/scrolltotop.svg" alt="Retourner en haut" />
+      </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script-level.js"></script>
   </body>
 </html>
