HTML + JS completed on page level - rest css to completed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li id="job-tab" class="sub-menu-list">Sport / Métier ?</li>
       </ul>
     </nav>
-    <section class="presentation">
+    <main class="presentation">
       <article id="data" class="active-article">
         <h3>La plongée en quelques chiffres...</h3>
         <div class="content">
@@ -149,7 +149,7 @@
           </div>
         </div>
       </article>
-    </section>
+    </main>
     <footer>
       <p>Guillaume / P1 - WCS - Oct-22</p>
       <div class="social-link">
