ajustment margin padding - configure desktop version level.html

--- a/level.html
+++ b/level.html
@@ -52,7 +52,7 @@
     <main>
       <section id="diver" class="disp-active">
         <div>
-          <h3>QUELQUES INFORMATIONS À CONNAÎTRE SUR LES NIVEAUX DE PLONGÉE</h3>
+          <h3>Quelques informations sur les niveaux de plongée</h3>
           <p>
             Si vous avez déjà fait votre baptême de plongée ou que vous vous
             intéressez de plus en plus à la pratique de cette activité
